Update all benchmarks.